INCLUDE_DIRECTORIES(..)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
LINK_LIBRARIES(pona)

ADD_EXECUTABLE(testLineParser testLineParser.cpp)
ADD_EXECUTABLE(testLinePrinter testLinePrinter.cpp)
ADD_EXECUTABLE(testFloat754 testFloat754.cpp)
ADD_EXECUTABLE(testList testList.cpp)
ADD_EXECUTABLE(testSyntax testSyntax.cpp)
ADD_EXECUTABLE(testString testString.cpp)
ADD_EXECUTABLE(testThreading testThreading.cpp)
ADD_EXECUTABLE(testChannel testChannel.cpp)
ADD_EXECUTABLE(testSharedMemory testSharedMemory.cpp)
ADD_EXECUTABLE(testProcess testProcess.cpp)
ADD_EXECUTABLE(testFileStatus testFileStatus.cpp)
ADD_EXECUTABLE(testInetAddress testInetAddress.cpp)
ADD_EXECUTABLE(testIoSyntaxSugar testIoSyntaxSugar.cpp)
ADD_EXECUTABLE(testSmallest testSmallest.cpp)
ADD_EXECUTABLE(testException testException.cpp)
ADD_EXECUTABLE(testTcpSocket testTcpSocket.cpp)
