INCLUDE_DIRECTORIES(..)

ADD_EXECUTABLE(testToolOptions testToolOptions.cpp)
ADD_EXECUTABLE(testVariant testVariant.cpp)
ADD_EXECUTABLE(testLineParser testLineParser.cpp)
ADD_EXECUTABLE(testLinePrinter testLinePrinter.cpp)
ADD_EXECUTABLE(testTypes testTypes.cpp)
ADD_EXECUTABLE(testList testList.cpp)
ADD_EXECUTABLE(testSyntax testSyntax.cpp)
ADD_EXECUTABLE(testString testString.cpp)
ADD_EXECUTABLE(testThreading testThreading.cpp)
ADD_EXECUTABLE(testChannel testChannel.cpp)
ADD_EXECUTABLE(testSharedMemory testSharedMemory.cpp)
ADD_EXECUTABLE(testProcess testProcess.cpp)
ADD_EXECUTABLE(testFileStatus testFileStatus.cpp)
ADD_EXECUTABLE(testSocketAddress testSocketAddress.cpp)
ADD_EXECUTABLE(testPrintAndScan testPrintAndScan.cpp)
ADD_EXECUTABLE(testSmallest testSmallest.cpp)
ADD_EXECUTABLE(testException testException.cpp)
ADD_EXECUTABLE(testTcpSocket testTcpSocket.cpp)
