LINK_LIBRARIES(ftlsystem)
INCLUDE_DIRECTORIES(..)

ADD_EXECUTABLE(testPattern testPattern.cpp)
ADD_EXECUTABLE(testWire testWire.cpp)
ADD_EXECUTABLE(testLayout testLayout.cpp)
ADD_EXECUTABLE(testProperty testProperty.cpp)
ADD_EXECUTABLE(testUri testUri.cpp)
ADD_EXECUTABLE(testJson testJson.cpp)
ADD_EXECUTABLE(testMap testMap.cpp)
ADD_EXECUTABLE(testAbnfCompiler testAbnfCompiler.cpp)
ADD_EXECUTABLE(testDateTime testDateTime.cpp)
ADD_EXECUTABLE(testString testString.cpp)
ADD_EXECUTABLE(testDir testDir.cpp)
ADD_EXECUTABLE(testNetworkInterface testNetworkInterface.cpp)
ADD_EXECUTABLE(testProcessStatus testProcessStatus.cpp)
ADD_EXECUTABLE(testSystemMacros testSystemMacros.cpp)
ADD_EXECUTABLE(testMutex testMutex.cpp)
ADD_EXECUTABLE(testCasts testCasts.cpp)
ADD_EXECUTABLE(testPath testPath.cpp)
ADD_EXECUTABLE(testSignals testSignals.cpp)
ADD_EXECUTABLE(testMemoryMapping testMemoryMapping.cpp)
ADD_EXECUTABLE(testFormat testFormat.cpp)
ADD_EXECUTABLE(testOptions testOptions.cpp)
ADD_EXECUTABLE(testVariant testVariant.cpp)
ADD_EXECUTABLE(testTypes testTypes.cpp)
ADD_EXECUTABLE(testList testList.cpp)
ADD_EXECUTABLE(testSyntax testSyntax.cpp)
# ADD_EXECUTABLE(testString testString.cpp)
ADD_EXECUTABLE(testThreading testThreading.cpp)
ADD_EXECUTABLE(testChannel testChannel.cpp)
ADD_EXECUTABLE(testProcess testProcess.cpp)
ADD_EXECUTABLE(testFileStatus testFileStatus.cpp)
ADD_EXECUTABLE(testSmallest testSmallest.cpp)
ADD_EXECUTABLE(testException testException.cpp)
ADD_EXECUTABLE(testSocketAddress testSocketAddress.cpp)
ADD_EXECUTABLE(testStack testStack.cpp)
ADD_EXECUTABLE(testLinkInfo testLinkInfo.cpp)
