INCLUDE_DIRECTORIES(../../system)

SET(FTLWINDOWS_HEADER
	XAuthFile.hpp
	XDisplayInfo.hpp
	XClient.hpp
)

SET(FTLWINDOWS_SOURCE
	XAuthFile.cpp
	XDisplayInfo.cpp
	XClient.cpp
)

ADD_LIBRARY(ftlwindows
	${FTLWINDOWS_HEADER}
	${FTLWINDOWS_SOURCE}
)

SET_TARGET_PROPERTIES(ftlwindows PROPERTIES VERSION 0.1.0 SOVERSION 0)

INSTALL(TARGETS ftlwindows ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
